@@ -2,10 +2,11 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.39 [20140404] [svn: r564]
+Changelog for sg3_utils-1.39 [20140405] [svn: r565]
   - sg_ses: add --eiioe=auto|force option
     - fix AES dpage element indexing problem
   - sginfo: strip trailing spaces from INQUIRY text
+  - sg_sat_set_features: add --readonly option
 
 Changelog for sg3_utils-1.38 [20140401] [svn: r563]
   - sg_ses: add --dev-slot-num= and --sas-addr=
